# stepengineexamples

./: .gitignore  README.md
Android/IFCViewerAndroid/: IFCViewerAndroid.docx  build.gradle
Android/IFCViewerAndroid/app/: build.gradle
Android/IFCViewerAndroidJ/: build.gradle  local.properties
Android/IFCViewerAndroidJ/app/: build.gradle
Android/IFCViewerAndroidJ/app/src/main/cpp/: CMakeLists.txt  IFCModel.cpp  common.h  gl_code.cpp  ifcenginewrapper.cpp
Android/IFCViewer_Xamarin_iOS/: IFCViewer Xamarin iOS.docx  IFCViewer_Xamarin_iOS.sln
Android/IFCViewer_Xamarin_iOS/IFCViewer_Xamarin_iOS/: AppDelegate.cs  GameView.cs  GameViewController.cs  IFCColor.cs  IFCItem.cs  IFCMaterial.cs  IFCViewer_Xamarin_iOS.csproj  IGameView.cs  IGameViewController.cs  IfcEngine.cs  IfcModel.cs  Info.plist  Main.cs  Renderer.cs  Uniforms.cs
Android/IfcViewer_Xamarin_Android/: IfcViewer_Xamarin_Android.sln
C#/IFCViewerSGL_AnyCPU/: IFCViewerSGL.sln
C#/IFCViewerSGL_AnyCPU_v1/: IFCViewerSGL.sln
C#/IFCViewerSGL_NET80_x64/: IFCViewerSGL.sln
C#/IFCViewerSGL_v1/: IFCViewerSGL.sln
C#/STEPExample/: STEPExample.sln
C#/STEPExample-CS/: STEPExample-CS.sln
C++/BuildSTEPTree/: BuildSTEPTree.sln
C++/HelloWall/: HelloWall.sln
C++/IFCEditor/: IFCEditor.sln
C++/StreamingSTPInOut/: StreamingIFCInOut.sln
C++/Version/: Version.sln
C++WebGL/Common/: engine.h  jsbuilder.h  texture.h
C++WebGL/STP2JS-Example/: STP2JS-Example.sln
C++WebGL/bin2js/: bin2js.sln
C++WebGL/stp2bin/: stp2bin.sln
CPP/IFCEditor/: IFCEditor.sln
CPP/ifceditor_v1/: ifceditor.sln
(+555 files in other folders)
